--- a/web/style.css
+++ b/web/style.css
@@ -2,11 +2,12 @@
 
 body {
 	font-family: "Sora", sans-serif;
+	--theme-color: {color}
 }
 
 .nav {
-	background-color: #5764f4;
-	padding: 1rem;
+	background-color: var(--theme-color);
+	height: 4rem;
 	color: white;
 	font-weight: 600;
 	font-size: 1.2rem;
@@ -14,17 +15,17 @@ body {
 	left: 0;
 	top: 0;
 	width: 100vw;
-	padding-left: 10rem;
+	padding: 0 10rem;
+	align-items: center;
+	display: flex;
 }
 
 body {
-	padding-left: 10rem;
-	padding-right: 10rem;
-	padding-top: 3rem;
+	padding: 4rem 10rem 0.25rem;
 }
 
 .blurple {
-	color: #5764f4;
+	color: var(--theme-color);
 }
 
 .appeal-form {
@@ -32,12 +33,8 @@ body {
 }
 
 .scradd-nav {
-	height: 1.2rem;
-	margin-right: 1rem;
-	transform: scale(150%);
-	position: relative;
-	top: 0.15rem;
-	margin-left: 0.5rem;
+	height: 3rem;
+	margin-right: 0.5rem;
 }
 
 textarea {
@@ -47,11 +44,22 @@ textarea {
 	padding: 0.75rem;
 	font-family: "Sora", sans-serif;
 	border-radius: 0.5rem;
+	resize: none;
+	height: 2rem;
+	max-height: 2rem;
+	min-height: 2rem;
+	width: 40rem;
+	overflow: hidden;
+	display: block;
+	margin-top: 1.4rem;
+	transition: all 0.5s;
+}
+
+textarea:focus {
+	min-height: 8rem;
 	resize: vertical;
 	max-height: 20rem;
-	min-height: 6rem;
-	width: 40rem;
-	max-width: 100%;
+	overflow: auto;
 }
 
 textarea::placeholder {
@@ -59,7 +67,7 @@ textarea::placeholder {
 }
 
 button {
-	background-color: #5764f4;
+	background-color: var(--theme-color);
 	color: white;
 	border: 0;
 	outline: none;
@@ -69,7 +77,7 @@ button {
 	padding-left: 2rem;
 	padding-right: 2rem;
 	cursor: pointer;
-	transition: opacity 0.3s, transform 0.3s;
+	transition: all 0.3s;
 	transform: none;
 	opacity: 1;
 }
@@ -79,14 +87,14 @@ button:hover {
 	opacity: 0.8;
 }
 
-.appeal-form button {
-	display: block;
-	margin-top: 1.5rem;
-}
-
 p.disclaimer {
 	font-weight: 200;
 	font-size: 0.8rem;
 	opacity: 0.5;
-	max-width: 25rem;
+}
+
+label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 1.5rem;
 }
