--- a/web/style.css
+++ b/web/style.css
@@ -3,14 +3,22 @@
 * {
 	box-sizing: border-box;
 	font-family: "Sora Variable", sans-serif;
-	--theme-color: #000;
+	--theme-color: rgb(208, 104, 0)
+		;
+}
+p {
+	color: #ccc;
 }
 
+h1 {
+	color: #ccc;
+}
 html {
 	height: 100%;
 	width: 100%;
 	padding: 0;
 	margin: 0;
+	background-color: #111
 }
 
 body {
@@ -81,13 +89,16 @@ button {
 	color: white;
 	border: 0;
 	padding: 0.75rem 2rem;
-	border-radius: 0.5rem;
+	border-radius: 1rem 0.5rem;
+	
 	transition: all 0.3s;
 }
 
 button:hover {
-	transform: scale(102%);
+
 	opacity: 0.8;
+	  box-shadow: 4px 4px 4px #888888;
+	
 }
 
 p.disclaimer {
