--- a/web/style.css
+++ b/web/style.css
@@ -128,3 +128,17 @@ label {
 .green {
 	background: #22c55e;
 }
+
+.emojisplosion {
+	background: none;
+	border: none;
+	cursor: default;
+	height: 2em;
+	margin-left: -1em;
+	margin-top: -1em;
+	position: fixed;
+	user-select: none;
+	width: 2em;
+	z-index: 2147483647;
+	transition: 16ms opacity, 16ms transform;
+}
