move some number stuff idrk
Signed-off-by: RedGuy12 <61329810+RedGuy12@users.noreply.github.com>

--- a/web/style.css
+++ b/web/style.css
@@ -139,6 +139,6 @@ label {
 	position: fixed;
 	user-select: none;
 	width: 2em;
-	z-index: 2147483647;
+	z-index: 10;
 	transition: 16ms opacity, 16ms transform;
 }
