--- a/web/discord.css
+++ b/web/discord.css
@@ -291,7 +291,9 @@
 	font-weight: 500;
 	padding: 0 2px;
 	border-radius: 3px;
-	transition: background-color 50ms ease-out, color 50ms ease-out;
+	transition:
+		background-color 50ms ease-out,
+		color 50ms ease-out;
 	color: #687dc6;
 	background-color: hsla(235, 85.6%, 64.7%, 0.15);
 }
