fix(suggestions): fix giant images
Signed-off-by: cobalt <61329810+RedGuy12@users.noreply.github.com>

--- a/web/discord.css
+++ b/web/discord.css
@@ -337,6 +337,6 @@
 
 .discord-attachment .discord-image-wrapper img,
 .discord-attachment .discord-image-wrapper video {
-	width: 100%;
+	max-width: 500px;
 	height: auto;
 }
